--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <script>
-    const WEBHOOK_URL = "https://diego-marino.app.n8n.cloud/webhook-test/chat";
+    const WEBHOOK_URL = "https://diego-marino.app.n8n.cloud/webhook/chat";
 
     const elMsgs = document.getElementById("msgs");
     const elMsg = document.getElementById("msg");
